<resources>
    <string name="app_name">Zivnostnicek</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_income">Income</string>
    <string name="title_activity_expense">Expense</string>
    <string name="title_activity_trader">Traders</string>
    <string name="title_activity_storage">Storage</string>
    <string name="title_activity_info">Information</string>
    <string name="title_activity_synchronization">Synchronization</string>
    <string name="title_activity_trader_new">Add trader</string>
    <string name="title_activity_trader_show">Show trader</string>
    <string name="title_activity_trader_edit">Edit trader</string>
    <string name="title_activity_trader_note">TraderNoteActivity</string>
    <string name="title_activity_trader_new_note">Add rating</string>
    <string name="title_activity_trader_show_note">Show Note</string>
    <string name="title_activity_trader_edit_note">TraderEditNoteActivity</string>
    <string name="title_activity_income_new">Add new income</string>
    <string name="title_activity_expense_new">ExpenseNewActivity</string>
    <string name="title_activity_info_currency">Info currency</string>
    <string name="title_activity_storage_new">Add storage item</string>
    <string name="title_activity_storage_show">Show storage item</string>
    <string name="title_activity_storage_edit">Edit storage item</string>
    <string name="title_activity_expense_show">Show expense</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_income_show">Show income</string>
    <string name="title_activity_expense_edit">Edit expense</string>
    <string name="title_activity_info_about_app">About application</string>
    <string name="title_activity_home_income">Home income</string>
    <string name="title_activity_home_expense">Home expense</string>
    <string name="title_activity_home_year_summary">Home year summary</string>
    <string name="title_activity_home_vat">Home vat summary</string>
    <string name="title_activity_home_traders">Home traders summary</string>
    <string name="title_activity_info_links">Useful Links</string>
    <string name="title_activity_bill_edit">Edit income</string>
    <string name="title_activity_info_date">Info Date</string>
    <string name="password">Password</string>
    <string name="user_name">E-mail</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">LOGIN</string>
    <string name="register_here">Register here</string>
    <string name="name_form">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="i_have_already_account">I have already account</string>
    <string name="register_form">Register form</string>
    <string name="register">REGISTER</string>
    <string name="empty_name">You did not enter a name</string>
    <string name="empty_user_name">You did not enter e-mail address</string>
    <string name="empty_password1">You did not enter password</string>
    <string name="empty_password2">You did not enter confirm password</string>
    <string name="passwords_are_not_equal">Password are not equal</string>
    <string name="passwords_is_too_short">Password is to short</string>
    <string name="email_is_not_valid">E-mail address is not valid</string>
    <string name="wrong_password_or_address">Wrong password or e-mail address</string>
    <string name="you_are_successfully_login">You are successfully login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="user_is_created">User is created</string>
    <string name="user_already_exists">User already exists</string>
    <string name="home">Home</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="traders">Traders</string>
    <string name="storage">Storage</string>
    <string name="info">Info</string>
    <string name="data_synchronization">Data synchronization</string>
    <string name="logout">Logout</string>
    <string name="header_logo">Header logo</string>
    <string name="log_out_question">Are you really want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_trader">Add trader</string>
    <string name="name">Name</string>
    <string name="contact_person">Contact person</string>
    <string name="phone_number">Phone number</string>
    <string name="identification_number">Identification number</string>
    <string name="tax_identification_number">Tax identification number</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="post_number">Post number</string>
    <string name="fill_information_about_trader">Fill information about trader</string>
    <string name="trader_name">*Trader name</string>
    <string name="telephone">Telephone number</string>
    <string name="trader_address">Trader address</string>
    <string name="house_number">House number</string>
    <string name="mandatory_information">* Mandatory information</string>
    <string name="company_name_is_empty">Company name is empty</string>
    <string name="telephone_has_wrong_format">Telephone has wrong format e.g. +420123456789</string>
    <string name="wrong_id_number">Wrong format of identification number e.g. 25596641</string>
    <string name="wrong_format_of_tid">Wrong format of TID e.g. CZ25596641</string>
    <string name="trader_is_created">Trader is created</string>
    <string name="search">Search</string>
    <string name="no_result">No result</string>
    <string name="trader_name_show">Trader name</string>
    <string name="edit">Edit</string>
    <string name="add_rating">Add rating</string>
    <string name="delete">Delete</string>
    <string name="delete_trader_question">Are you really want to delete this trader?</string>
    <string name="trader_deleted_message">Trader has been deleted</string>
    <string name="trader_not_deleted_message">Trader has not been deleted</string>
    <string name="save">Save</string>
    <string name="edit_information_about_trader">Edit information about trader</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="rating">Rating</string>
    <string name="note_title_is_empty">Note title is empty</string>
    <string name="note_is_empty">Note is empty</string>
    <string name="note_has_been_added">Note has been added</string>
    <string name="date">Date</string>
    <string name="note_delete_message">Note has been deleted</string>
    <string name="note_not_deleted_message">Note not has been deleted</string>
    <string name="note_delete_question">Are you really want to delete this note?</string>
    <string name="note_update_message">Note has been updated</string>
    <string name="fill_information_about_expense">Fill information about expense</string>
    <string name="number_of_bill_name">*Number of bill(Name)</string>
    <string name="bill_name">Number of bill(Name)</string>
    <string name="amount">*Amount</string>
    <string name="amount_show">Amount</string>
    <string name="VAT">VAT[%]</string>
    <string name="valuty_list">Exchange Rates</string>
    <string name="basic_currency">Basic currency</string>
    <string name="europe">European Union</string>
    <string name="eur">EUR</string>
    <string name="dot">…</string>
    <string name="usa">USA</string>
    <string name="usd">USD</string>
    <string name="great_britain">Great Britain</string>
    <string name="gbp">GBP</string>
    <string name="canada">Canada</string>
    <string name="cad">CAD</string>
    <string name="sweden">Sweden</string>
    <string name="sek">SEK</string>
    <string name="source_cnb">www.cnb.cz</string>
    <string name="source">Source</string>
    <string name="country">Country</string>
    <string name="code">Code</string>
    <string name="kurz">Kurz</string>
    <string name="add_expense">Add expense</string>
    <string name="take_picture_from">Take picture from </string>
    <string name="trader">Trader</string>
    <string name="select_trader">Select trader</string>
    <string name="add_type">Add type</string>
    <string name="expense_is_created">Expense is created</string>
    <string name="expense_items">Expense items</string>
    <string name="add_income">Add income</string>
    <string name="add_item">Add item</string>
    <string name="item_name">*Item name</string>
    <string name="Quantity">*Quantity</string>
    <string name="unit">Unit</string>
    <string name="item_name_is_empty">Item name is empty</string>
    <string name="quantity_is_empty">Quantity is empty</string>
    <string name="fill_information_about_storage_item">Fill information about storage item</string>
    <string name="storage_item_has_been_added">Storage item has been added</string>
    <string name="delete_storage_item_question">Are you really want to delete this storage item?</string>
    <string name="storage_item_has_been_deleted">Storage item has been deleted</string>
    <string name="item_name_show">Item name</string>
    <string name="quantity_show">Quantity</string>
    <string name="edit_information_about_storage_item">Edit information about storage item</string>
    <string name="storage_item_has_been_edited">Storage item has been edited</string>
    <string name="add">Add</string>
    <string name="add_quantity">Add quantity</string>
    <string name="select_storage_item">Select storage item</string>
    <string name="fill_information_about_income">Fill information about income</string>
    <string name="name_of_bill_is_empty">Name of bill is empty</string>
    <string name="amount_is_empty">Amount is empty</string>
    <string name="income_has_been_added">Income has been added</string>
    <string name="year">Year:</string>
    <string name="month">Month:</string>
    <string name="save_settings">Save settings</string>
    <string name="add_bill_type">Add bill type</string>
    <string name="bill_type_name">Bill type name</string>
    <string name="pick_color">Pick color</string>
    <string name="income_and_expense">Income and expense</string>
    <string name="year_summary">Year summary</string>
    <string name="traders_summary">Traders summary</string>
    <string name="version">Version:</string>
    <string name="author">Author: </string>
    <string name="contact">Contact: </string>
    <string name="about_app_1">This application was created as a student project within the bachelor thesis.</string>
    <string name="author_name">Ondřej Váně</string>
    <string name="version_number">1.0</string>
    <string name="email">onry.vane@gmail.com</string>
    <string name="sync_data_with_server">Turn on automatic backup of data</string>
    <string name="sync_allow_only_on_wifi">Allow backup only on Wi-Fi</string>
    <string name="sync_info_1">Data will be automatically synchronize with server every hour, if you will be connect to the internet.</string>
    <string name="sync_info_2">You can synchronize data now by clicking on button below.</string>
    <string name="back_up_your_data_now">Back up your data now</string>
    <string name="restore_your_data_now">Restore your data now</string>
    <string name="protocol">Protocol</string>
    <string name="server_settings">Server settings</string>
    <string name="server_address">Server address</string>
    <string name="name_of_app">Name og app:</string>
    <string name="check_if_IN_is_same_as_TIN">Check if IN is same like TIN</string>
</resources>