<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/option_menu_home_income_and_expense"
        android:orderInCategory="100"
        android:title="@string/income_and_expense"
        app:showAsAction="never" />

    <item
        android:id="@+id/option_menu_home_income"
        android:orderInCategory="100"
        android:title="@string/income"
        app:showAsAction="never" />

    <item
        android:id="@+id/option_menu_home_expense"
        android:orderInCategory="100"
        android:title="@string/expense"
        app:showAsAction="never" />

    <item
        android:id="@+id/option_menu_home_year_summary"
        android:orderInCategory="100"
        android:title="@string/year_summary"
        app:showAsAction="never" />

    <item
        android:id="@+id/option_menu_home_storage"
        android:orderInCategory="100"
        android:title="@string/storage_summary"
        app:showAsAction="never" />

    <item
        android:id="@+id/option_menu_home_traders"
        android:orderInCategory="100"
        android:title="@string/traders_summary"
        app:showAsAction="never" />

</menu>
