<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_bill_type"
        android:textSize="25sp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutBillTypeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextBillTypeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bill_type_name"
            android:inputType="text"
            android:maxLines="1"
            android:drawableStart="@drawable/ic_type"
            android:textColor="@color/black" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonPickColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/pick_color"/>


    <Button
        android:id="@+id/buttonAddBillType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/add"/>


</LinearLayout>