<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context=".activities.trader.TraderNewActivity"
    tools:showIn="@layout/app_bar_trader_new">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/appCompatTextViewLoginLinkpokus"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/fill_information_about_trader"
            android:textSize="16sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutCompanyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextCompanyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trader_name"
                android:inputType="text"
                android:maxLines="1"
                android:drawableStart="@drawable/ic_trader"
                android:textColor="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutContactPerson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextContactPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_person"
                android:inputType="text"
                android:maxLines="1"
                android:drawableStart="@drawable/ic_contact_person"
                android:textColor="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutTelephoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextTelephoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telephone"
                android:inputType="phone"
                android:maxLines="1"
                android:drawableStart="@drawable/ic_telephone"
                android:textColor="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutIdentificationNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextIdentificationNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/identification_number"
                android:inputType="text"
                android:maxLines="1"
                android:drawableStart="@drawable/ic_identification_number"
                android:textColor="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/checkBoxSameINasTIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_if_IN_is_same_as_TIN"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutTaxIdentificationNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextTaxIdentificationNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tax_identification_number"
                android:inputType="text"
                android:maxLines="1"
                android:drawableStart="@drawable/ic_tax_identification_number"
                android:textColor="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/appCompatTextViewAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/trader_address"
            android:textSize="16sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:inputType="text"
                android:maxLines="1"
                android:drawableStart="@drawable/ic_city"
                android:textColor="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutStreet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextStreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/street"
                android:inputType="text"
                android:maxLines="1"
                android:drawableStart="@drawable/ic_street"
                android:textColor="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutHouseNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextHouseNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/house_number"
                android:inputType="number"
                android:maxLines="1"
                android:drawableStart="@drawable/ic_house_number"
                android:textColor="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/appCompatTextViewMandatoryInformation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/mandatory_information"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonAddTrader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:onClick="submitTraderForm"
            android:text="@string/add_trader"/>

    </android.support.v7.widget.LinearLayoutCompat>
</ScrollView>