<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollView"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context="com.example.ondrejvane.zivnostnicek.activities.sync.SynchronizationActivity"
    tools:showIn="@layout/app_bar_synchronization">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBoxSyncOn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="40dp"
                    android:text="@string/sync_data_with_server"/>

                <TextView
                    android:id="@+id/textViewSyncInfo1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sync_info_1"
                    android:textColor="@color/white"/>


                <CheckBox
                    android:id="@+id/checkBoxSyncWiFi"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:enabled="false"
                    android:text="@string/sync_allow_only_on_wifi"/>



                <TextView
                    android:id="@+id/textViewSyncInfo2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="120dp"
                    android:text="@string/sync_info_2"
                    />

                <Button
                    android:id="@+id/buttonPushNow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_below="@+id/linearLayoutSettings3"
                    android:onClick="syncPush"
                    android:text="@string/back_up_your_data_now"/>

                <Button
                    android:id="@+id/buttonPullNow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_below="@+id/linearLayoutSettings3"
                    android:onClick="syncAlertDialog"
                    android:text="@string/restore_your_data_now"/>


        </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>