<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/server_settings"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/protocol"
            android:textSize="18sp"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinnerServerProtocol"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:entries="@array/protocols"
            android:prompt="@string/protocol"
            style="@style/Widget.AppCompat.Spinner.Underlined" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutServerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextServerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/server_address"
            android:inputType="text"
            android:maxLines="1"
            android:drawableStart="@drawable/ic_server"
            android:text="@string/www.zivnostnicek.cz"
            android:textColor="@color/black" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/buttonSaveServerSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/save_settings"/>


</LinearLayout>